fixed container sizing on mobile devices

--- a/design.css
+++ b/design.css
@@ -262,4 +262,7 @@ section {
         height:95vw;
         margin-top: 12%;
     }
+    #herosection{
+        height:96vh;
+    }
 }
